# road-editor-2

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  run.bat
.claude/: settings.local.json
data/: sample_environment.json  sample_road.json
docs/: development_environment.md  road_data_format.json  road_data_format_spec.md  road_editor_plan.md  road_editor_standalone_notes.md
shaders/: line.frag  line.vert  point.frag  point.vert  road.frag  road.vert  screen_line.frag  screen_line.geom  screen_line.vert
src/: main.cpp
src/app/: HeightmapPanel.cpp  HeightmapPanel.h  MainWindow.cpp  MainWindow.h  OutlinerPanel.cpp  OutlinerPanel.h  PropertiesPanel.cpp  PropertiesPanel.h
src/config/: BuildConfig.h.in
src/editor/: EditorState.cpp  EditorState.h
src/generator/: BankAngleGen.cpp  BankAngleGen.h  ClothoidGen.cpp  ClothoidGen.h  IntersectionMeshGen.cpp  IntersectionMeshGen.h  LaneSectionGen.cpp  LaneSectionGen.h  RoadMeshGen.cpp  RoadMeshGen.h  VerticalCurveGen.cpp  VerticalCurveGen.h
src/model/: EnvironmentSerializer.cpp  EnvironmentSerializer.h  EnvironmentState.h  Road.h  RoadNetwork.cpp  RoadNetwork.h  Serializer.cpp  Serializer.h
src/renderer/: LineBatch.cpp  LineBatch.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
src/scene/: RoadRenderer.cpp  RoadRenderer.h  TerrainRenderer.cpp  TerrainRenderer.h  TransformGizmo.cpp  TransformGizmo.h
src/viewport/: AxisGizmo.cpp  AxisGizmo.h  Camera.cpp  Camera.h  Grid.cpp  Grid.h  Viewport3D.cpp  Viewport3D.h
